src/lock/style.css
:root {
    --background: linear-gradient(to right, purple, rgb(35, 192, 204));
}





* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

html {
    font: inherit;
    color: white;
}


body {
    width: 100vw;
    height: 100vh;
    font-size: 16px;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
    background: var(--background);
}






/* MENUBAR */
.menubar {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row-reverse;
    
    position: absolute;
    padding-right: 10px;
    top: 0;
    right: 0;
    height: 35px;
}

.menubar > * {
    height: 100%;
}

/* APPLETS */
.applets {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    position: absolute;
    right: 16px;
    bottom: 16px;
    height: 35px;
    gap: 1px;
}

.applets > * {
    height: 100%;
    width: fit-content;
}




.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.container > #avatar {
    width: 180px;
    height: 180px;
    border-radius: 50%;
    background-color: white;
    user-select: none;
    pointer-events: none;
    padding: 10px;
}

.container > #username {
    /* username */
    color: white;
    font-size: 30px;
    margin: 15px 0;
    user-select: none;
    pointer-events: none;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
}

.container > #password {
    padding: 0 6px;
    font-size: 16px;
    border: none;
    outline: none;
    background-color: rgba(255, 255, 255, 0.6);
    width: 200px;
    height: 33px;
    border-radius: 4px;
}


.container > #show-password {
    position: relative;
    top: -31.5px;
    left: 83px;
    width: 30px;
    height: 30px;
    cursor: pointer;
    border: none;
    border-radius: 4px;
    background-color: transparent;
}
.container > #show-password:active {
    background-color: rgba(86, 86, 86, 0.247);
}

.container > #show-password svg {
    fill: white;
    height: 100%;
    width: 100%;
    border-radius: 2px;
}
.container > #show-password:active svg {
    fill: gray;
}

@keyframes shake {
    0% { transform: translateX(0); }
    25% { transform: translateX(-10px); }
    50% { transform: translateX(10px); }
    75% { transform: translateX(-10px); }
    100% { transform: translateX(0); }
}




/* USERS */
.users {
    position: absolute;
    left: 16px;
    bottom: 16px;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    flex-direction: column-reverse;
    gap: 1px;
}

.users > .user {
    display: flex;
    align-items: center;
    user-select: none;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 8px;
    padding-right: 5px;
    border-radius: 5px;
    height: 50px;
    width: 250px;
}

.users > .user:hover {
    background-color: rgba(255, 255, 255, 0.2);
}

.user > .avatar {
    width: 40px;
    height: 40px;
    padding: 3px;
    border-radius: 50%;
    margin-right: 16px;
    user-select: none;
    pointer-events: none;
    background-color: white;
}
.user > p.avatar {
    display: flex;
    justify-content: center;
    align-items: center;
    color: black;
}

.user > .username {
    font-size: 20px;
    color: white;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
}

/* ONLY DISPLAY USERS ON DESKTOP */
@media (pointer: coarse) {
    .users {
        display: none;
    }
}

